Address PR comment, ensure Java 1.7 build so no one else gets surprised